crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__postgres_preload_configuration_rejects_unsafe_combination.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    "18",
    "PostgreSQL track `18` cannot preload `timescaledb` with `pg_duckdb` until their compatibility is validated; remove one library from the track preload desired state",
    RuntimeFilePresence {
        metadata: false,
        config: false,
    },
    false,
)
