crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__production_demanded_resource_without_adapter_fails_before_env_rendering.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    "Err(\n    UnsupportedManagedResourceRuntime {\n        resource: \"mailpit\",\n    },\n)",
    None,
    [
        ProjectManagedResourceRecord {
            project_id: "<project_id>",
            resource_name: "mailpit",
            track: "1.0",
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
    [
        RuntimeObservedStateRecord {
            subject: Resource {
                name: "mailpit",
                track: "1.0",
            },
            status: Failed,
            message: Some(
                "Managed Resource runtime `mailpit` is not supported yet",
            ),
            observed_at: "<timestamp>",
        },
    ],
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Failed,
            message: Some(
                "Managed Resource runtime `mailpit` is not supported yet",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
)
