crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__redis_port_reassignment_refreshes_ready_allocation_env.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    "# >>> PV MANAGED\nCACHE_REDIS_HOST=127.0.0.1\nCACHE_REDIS_PORT=<redis_port>\nCACHE_REDIS_PREFIX=acme-test-cache-\nCACHE_REDIS_URL=redis://127.0.0.1:<redis_port>/0\nREDIS_HOST=127.0.0.1\nREDIS_PORT=<redis_port>\nREDIS_URL=redis://127.0.0.1:<redis_port>/0\n# <<< PV MANAGED\n",
    ManagedResourceTrackRecord {
        resource_name: "redis",
        track: "7.2",
        desired_state: Installed,
        installed_version: Some(
            "7.2.0-pv1",
        ),
        current_artifact_path: Some(
            "<tempdir>/home/.pv/resources/redis/7.2/releases/7.2.0-pv1",
        ),
        env: {
            "host": "127.0.0.1",
            "port": "<redis_port>",
            "url": "redis://127.0.0.1:<redis_port>/0",
        },
        usage_count: 1,
        removal_prune: false,
        removal_force: false,
        updated_at: "<timestamp>",
    },
    [
        ResourceAllocationRecord {
            id: "allocation_000001",
            project_id: "<project_id>",
            resource_name: "redis",
            track: "7.2",
            allocation_name: "cache",
            generated_name: "acme-test-cache-",
            env: {
                "host": "127.0.0.1",
                "port": "<redis_port>",
                "prefix": "acme-test-cache-",
                "url": "redis://127.0.0.1:<redis_port>/0",
            },
            status: Ready,
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
    [
        PortAssignment {
            owner: Resource {
                name: "redis",
                track: "7.2",
                port: "redis",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
    ],
    [
        RuntimeObservedStateRecord {
            subject: Resource {
                name: "redis",
                track: "7.2",
            },
            status: Running,
            message: Some(
                "Managed Resource runtime is ready",
            ),
            observed_at: "<timestamp>",
        },
    ],
)
