crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__redis_process_arguments_disable_snapshots_without_empty_argv.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    [
        "<tempdir>/home/.pv/config/resources/redis/7.2.json",
    ],
    "bind 127.0.0.1\nport <redis_port>\ndir \"<tempdir>/home/.pv/resources/redis/7.2/data\"\nsave \"\"\nappendonly no\nset-proc-title no\n",
)
