crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__redis_process_spec_disables_rdb_enables_aof_and_preserves_process_title.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    [
        "<tempdir>/home/.pv/config/resources/redis/7.2.json",
    ],
    "bind 127.0.0.1\nport <redis_port>\ndir \"<tempdir>/home/.pv/resources/redis/7.2/data\"\nsave \"\"\nappendonly yes\nappendfsync everysec\nset-proc-title no\n",
)
